# xmltv-py

./: README.md  pyproject.toml
tests/: test_utils.py
tests/test_data/disneychannel.no/xmltv-go/: disneychannel.no_2026-03-31.xml  disneychannel.no_2026-04-01.xml
xmltv/: __init__.py  channel.py  elements.py  program.py  tv.py  utils.py  xmltv.py
